# star-wires

./: CMakeLists.txt  FC3D.js  FC3D.wasm  index.html
assets/: bullets.lua  cursor.lua  main.lua  objects.lua  particles.lua  ship.lua  vectors.lua
assets/shaders/glsl100/: blur.fs
src/: lapi.cpp  lapi.h  lua_api.c  lua_api.cpp  lua_api.h  main.c  main.cpp  mymath.cpp  mymath.h  particles.cpp  particles.h  render.cpp  renderer.h  shaker.cpp  shaker.h
